<resources>
    <string name="app_name">Messenger</string>
    <string name="hint_username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password_string">Password</string>
    <string name="register_string">REGISTER</string>
    <string name="already_have_an_account_string">Already have an account ?</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login_button">Login</string>
    <string name="back_to_register_activity">Back To Register</string>
    <string name="username">Username</string>
    <string name="enter_message">Enter Message</string>
    <string name="user_added_to_database">User Registered</string>
    <string name="latest_message">Latest Message</string>
</resources>